tests/paczka1/fuzzy1/35833861.err
Error in line 2: OcVAxlqMt S812 65,7
Error in line 4: OcVAxlqMt A521 26,9
Error in line 8: OcVAxlqMt S600 34,0
Error in line 9: OcVAxlqMt A521 49,4
Error in line 10: OcVAxlqMt S600 84,8
Error in line 14: FWkgc S600 56,7
Error in line 20: r0XPdaLP5kk S600 12,2
Error in line 28: Vnm4nxbRmq A521 70,5
Error in line 29: FWkgc A521 107,3
